[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio"
version = "2025.6.0"
description = "Multi-tenant portfolio management service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
    "common",
    "contracts",
    "messaging",
    "observability",
    "storage",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0",
    "pytest-asyncio>=0.23.4",
    "pytest-httpx==0.30",
    "pytest-cov",
    "ruff==0.4",
    "mypy==1.10",
    "testcontainers[postgres]",
    "fastavro>=1.9",
    "aiosqlite>=0.20",
    "fakeredis[aioredis]>=2.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "contract: Avro schema contract tests",
    "integration: tests requiring external infra (Docker/Postgres)",
    "e2e: end-to-end tests requiring full infra (Kafka, Postgres, etc.)",
]
