[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio"
version = "2025.6.0"
description = "Multi-tenant portfolio management service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
    "common",
    "contracts",
    "messaging",
    "observability",
    "storage",
    "snaptrade-python-sdk>=1.0,<2",  # pinned: update only after reviewing migration guide
    "PyJWT[cryptography]>=2.8,<3",  # RS256 JWT verification (PRD-0025 InternalJWTMiddleware)
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "testcontainers[postgres]>=4.8,<5",
    "fastavro>=1.9,<2",
    "aiosqlite>=0.20,<1",
    "fakeredis[aioredis]>=2.23,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "contract: Avro schema contract tests",
    "integration: tests requiring external infra (Docker/Postgres)",
    "e2e: end-to-end tests requiring full infra (Kafka, Postgres, etc.)",
]
