[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-chat"
version = "2025.6.0"
description = "RAG-powered conversational intelligence service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_chat"]
